welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: Missing closing brace `}' assumed here
while (estSurMessage()){
^